Add API Methods